// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots StatusIndicator All 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <p
      class="StatusIndicator-t1vtrp-0 oimeG"
      type="neutral"
    >
      Neutral
    </p>
    <p
      class="StatusIndicator-t1vtrp-0 iLYile"
      type="quiet"
    >
      Quiet
    </p>
    <p
      class="StatusIndicator-t1vtrp-0 DgsYR"
      type="informative"
    >
      Informative
    </p>
    <p
      class="StatusIndicator-t1vtrp-0 HQKEd"
      type="success"
    >
      Success
    </p>
    <p
      class="StatusIndicator-t1vtrp-0 hIJVBS"
      type="warning"
    >
      Warning
    </p>
    <p
      class="StatusIndicator-t1vtrp-0 kkxUnz"
      type="danger"
    >
      Danger
    </p>
  </div>
</div>
`;

exports[`Storyshots StatusIndicator Danger 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <p
      class="StatusIndicator-t1vtrp-0 jYgTmJ"
      type="danger"
    >
      Danger
    </p>
  </div>
</div>
`;

exports[`Storyshots StatusIndicator Following text 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 fUpMMZ"
    >
      <span
        class="sc-AykKH kMmipS"
        font-size="26px"
        font-weight="500"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 bRldQ"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-sc-1qu1edy-0 fUpMMZ"
    >
      <span
        class="sc-AykKI sc-AykKJ caWLFB"
        font-size="20px"
        font-weight="500"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 bRldQ"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-sc-1qu1edy-0 fUpMMZ"
    >
      <span
        class="sc-AykKF eOMZSl"
        color="currentColor"
        font-size="16px"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 bRldQ"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-sc-1qu1edy-0 fUpMMZ"
    >
      <span
        class="sc-AykKF eqAfpn"
        color="currentColor"
        font-size="small"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 bRldQ"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-sc-1qu1edy-0 fUpMMZ"
    >
      <span
        class="sc-AykKF dSnkMp"
        color="currentColor"
        font-size="smaller"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 bRldQ"
        type="neutral"
      >
        Status
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots StatusIndicator Informative 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <p
      class="StatusIndicator-t1vtrp-0 qPrYb"
      type="informative"
    >
      Informative
    </p>
  </div>
</div>
`;

exports[`Storyshots StatusIndicator Neutral 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <p
      class="StatusIndicator-t1vtrp-0 bRldQ"
      type="neutral"
    >
      Neutral
    </p>
  </div>
</div>
`;

exports[`Storyshots StatusIndicator Quiet 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <p
      class="StatusIndicator-t1vtrp-0 izHhko"
      type="quiet"
    >
      Quiet
    </p>
  </div>
</div>
`;

exports[`Storyshots StatusIndicator Success 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <p
      class="StatusIndicator-t1vtrp-0 vzJDn"
      type="success"
    >
      Success
    </p>
  </div>
</div>
`;

exports[`Storyshots StatusIndicator Warning 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <p
      class="StatusIndicator-t1vtrp-0 hwsUBc"
      type="warning"
    >
      Warning
    </p>
  </div>
</div>
`;
